k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: strapi
  labels:
    app: strapi
    service: strapi
spec:
  ports:
    - name: http
      port: 8011
      targetPort: 1337
  selector:
    app: strapi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strapi
      version: v1
  template:
    metadata:
      labels:
        app: strapi
        version: v1
    spec:
      serviceAccountName: strapi
      containers:
        - image: strapi/strapi
          imagePullPolicy: IfNotPresent
          name: strapi
          ports:
            - containerPort: 1337
          volumeMounts:
            - mountPath: "/srv/app"
              name: pv-strapi
        - image: mongo
          imagePullPolicy: IfNotPresent
          name: mongo
          volumeMounts:
            - mountPath: "/data/db"
              name: pv-mongo
      volumes:
        - name: pv-strapi
          persistentVolumeClaim:
            claimName: pvc-strapi
        - name: pv-mongo
          persistentVolumeClaim:
            claimName: pvc-mongo
