k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: strapi-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - cms.thedummydogo.com
    - www.cms.thedummydogo.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: strapi
spec:
  hosts:
  - cms.thedummydogo.com
  - www.cms.thedummydogo.com
  gateways:
  - strapi-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8011
        host: strapi
